src/test/ui/issues/issue-15381.stderr
error[E0005]: refutable pattern in `for` loop binding: `&[]` not covered
  --> $DIR/issue-15381.rs:4:9
   |
LL |     for &[x,y,z] in values.chunks(3).filter(|&xs| xs.len() == 3) {
   |         ^^^^^^^^ pattern `&[]` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
